# Kinisi

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  fetch.sh  getthirdparty.sh  platformtest.cpp  robot.cpp
joystick/: CMakeLists.txt  joystick.cpp
libcommon/: CMakeLists.txt  command_manager.h  commands.h  settings.h
libcommon/internal/: command_manager.cpp  settings.cpp
libjoystick/: CMakeLists.txt  joystick.cpp  joystick.h  joystickevents.h  joystickworker.h
libjoystick/internal/: joystickevents.cpp  joystickworker.cpp
libmqtt/: CMakeLists.txt  mqttclient.cpp  mqttclient.h  mqttcommands.cpp  mqttcommands.h  mqttworker.cpp  mqttworker.h
libmqtt/internal/: mqttclient.cpp  mqttcommands.cpp
libplatform/: CMakeLists.txt  CPhidgetManager.cpp  CPhidgetManager.h  hwplatform.cpp  hwplatform.h  motor.h  platform.cpp  platform.h  platformcommands.cpp  platformcommands.h  platformworker.cpp  platformworker.h  virtualplatform.cpp  virtualplatform.h
libplatform/devices/: current_sensor.cpp  motor.cpp
libplatform/kinisi_platform/: controller.cpp  controller.h  kinisicommands.h  kinisiplatform.cpp  kinisiplatform.h
libplatform/phidget_platform/: current_sensor.h  hwplatform.h
libsettings/: CMakeLists.txt  libsettings.cpp  libsettings.h  settings.cpp  settings.h
libutil/: CMakeLists.txt  util.cpp  util.h
